--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #@Default user credentials
 #spring.security.user.name=vibhav
 #spring.security.user.password=abj1234
+
+
+#added a new line
